# Building-Generative-AI-Services-with-FastAPI

./: .gitignore  README.md
Chapter 1. Develloping AI services/: 1 Introduction.md
Chapter 1. Develloping AI services/2 Getting Started with FastAPI/: Tuto FastAPI uv setup.md
Part 1. Develloping AI services/Chapter 2. Getting Started with FastAPI/: Getting started with FastAPI.md  Tuto FastAPI uv setup.md
Part 1. Develloping AI services/Chapter 2. Getting Started with FastAPI/example-genai-fastapi-service/: main.py  pyproject.toml
Part 1. Develloping AI services/Chapter 3. Ai Integration and Model Serving/: Serving language models.md
Part 1. Develloping AI services/Chapter 3. Ai Integration and Model Serving/all-models-app/: README.md  bento.py  client.py  main.py  main_bentoml_passtrhough.py  main_langchain.py  main_openai.py  models.py  pyproject.toml  schemas.py  utils.py
Part 1. Develloping AI services/Chapter 4. Implementing Type-Safe AI Services/: Implementing Type-Safe AI Services.md
Part 2. Communicating with External Systems/Chapter 5. Achieving Concurrency in AI Workloads/: Achieving Concurrency in AI Workloads.md
Part 2. Communicating with External Systems/Chapter 5. Achieving Concurrency in AI Workloads/async_vs_sync/: main.py  pyproject.toml
Part 2. Communicating with External Systems/Chapter 5. Achieving Concurrency in AI Workloads/talk_to_documents/: README.md  client.py  dependencies.py  main.py  pyproject.toml
Part 2. Communicating with External Systems/Chapter 5. Achieving Concurrency in AI Workloads/talk_to_documents/rag/: extractor.py  repository.py  service.py  transform.py
Part 2. Communicating with External Systems/Chapter 5. Achieving Concurrency in AI Workloads/talk_to_the_web/: dependencies.py  main.py  pyproject.toml  scraper.py
Part 2. Communicating with External Systems/Chapter 6. Real-Time Communication with Generative Models/: Real-Time Communication with Generative Models.md
Part 2. Communicating with External Systems/Chapter 7. Integrating Databases into AI Services/: Integrating Databases into AI Services.md
Part 2. Communicating with External Systems/Chapter 7. Integrating Databases into AI Services/database-ai-services/: README.md  alembic.ini  entities.py  main.py  pyproject.toml  schemas.py  settings.py
Part 2. Communicating with External Systems/Chapter 7. Integrating Databases into AI Services/database-ai-services/alembic/: env.py
Part 2. Communicating with External Systems/Chapter 7. Integrating Databases into AI Services/database-ai-services/repositories/: __init__.py  (+2 more)
Part 2. Communicating with External Systems/Chapter 8. Authentication and Authorization/authentication-authorization/: schemas.py  settings.py
Part 2. Communicating with External Systems/Chapter 9. Securing AI Services/: Securing AI Services.md
Part 3. Securing, Optimizing, Testing, and Deploying AI Services/Chapter 10. Optimizing AI Services/: Optimizing AI Services.md
Part 3. Securing, Optimizing, Testing, and Deploying AI Services/Chapter 11. Testing AI Services/: Testing AI Services.md
Part 3. Securing, Optimizing, Testing, and Deploying AI Services/Chapter 11. Testing AI Services/testing-ai-services/: main.py  pyproject.toml
Part 3. Securing, Optimizing, Testing, and Deploying AI Services/Chapter 12. Deployment of AI Services/: Deployment of AI Services.md
Part 3. Securing, Optimizing, Testing, and Deploying AI Services/Chapter 8. Authentication and Authorization/: Authentication and Authorization.md
Part 3. Securing, Optimizing, Testing, and Deploying AI Services/Chapter 8. Authentication and Authorization/authentication-authorization/: database.py  entities.py  main.py  main_simple.py  pyproject.toml  repositories.py
Part 3. Securing, Optimizing, Testing, and Deploying AI Services/Chapter 8. Authentication and Authorization/authentication-authorization/routes/: auth.py  resource.py
(+6 files in other folders)
