[project]
name = "talk-to-documents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi[standard]>=0.129.0",
    "loguru>=0.7.3",
    "openai>=2.21.0",
    "pypdf>=6.7.1",
    "qdrant-client>=1.16.2",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "loguru>=0.7.3",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
