[project]
name = "authentication-authorization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.0",
    "fastapi[standard]>=0.129.0",
    "openai>=2.21.0",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.0",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "loguru>=0.7.3",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
